--- a/packages/content-parser/package.json
+++ b/packages/content-parser/package.json
@@ -26,6 +26,7 @@
 		"@repo/typescript-config": "workspace:*",
 		"@types/mdast": "^4.0.3",
 		"@types/node": "^24.1.0",
+		"dotenv": "^17.2.1",
 		"tsup": "^8.0.0",
 		"typescript": "^5.0.0"
 	}
