--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
 		"postcss": "^8.5.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
+		"react-highlight-words": "^0.21.0",
 		"react-hook-form": "^7.62.0",
 		"tailwindcss": "^4.1.11"
 	},
@@ -32,6 +33,7 @@
 		"@types/node": "^22.15.3",
 		"@types/react": "19.1.0",
 		"@types/react-dom": "19.1.1",
+		"@types/react-highlight-words": "^0.20.0",
 		"typescript": "5.8.2"
 	}
 }
