feat: 문서 language_code 작업 및 레거시 문서 제거

--- a/content/json/medical-appointment-consultation.json
+++ b/content/json/medical-appointment-consultation.json
@@ -5,6 +5,7 @@
     "category": "일상생활",
     "difficulty": "중급",
     "description": "병원 예약부터 진료 상담까지의 의료진과의 대화 상황을 학습합니다.",
+    "language_code": "en",
     "total_sentences": 11
   },
   "korean_scripts": [
