--- a/content/json/medical-appointment-health-consultation.json
+++ b/content/json/medical-appointment-health-consultation.json
@@ -5,6 +5,7 @@
     "category": "일상생활",
     "difficulty": "중급",
     "description": "병원 예약부터 증상 설명, 의료진과의 상담까지 의료 환경에서 필요한 영어 표현들을 학습합니다.",
+    "language_code": "en",
     "total_sentences": 11
   },
   "korean_scripts": [
