--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
 		"@tailwindcss/postcss": "^4.1.11",
 		"@tanstack/react-query": "^5.84.1",
 		"@tanstack/react-query-devtools": "^5.84.1",
+		"@vercel/speed-insights": "^1.2.0",
 		"next": "^15.4.2",
 		"postcss": "^8.5.6",
 		"react": "^19.1.0",
