--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
 		"@tanstack/react-query-devtools": "^5.84.1",
 		"@vercel/speed-insights": "^1.2.0",
 		"next": "^15.4.2",
+		"nuqs": "^2.6.0",
 		"postcss": "^8.5.6",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
